--- a/.env-example
+++ b/.env-example
@@ -6,11 +6,12 @@ MQ_PASSWORD='$p$a#s13!HDl37'
 MQ_HOSTNAME='fleetmq-pl.cartrack.com:5671'
 
 # Hostnames available
-# South Africa: fleetmq-za.cartrack.com
-# Poland:       fleetmq-pl.cartrack.com
 # Botswana:	    fleetmq-bw.cartrack.com
+# Mozambique    fleetmq-mz.cartrack.com
 # Namibia	    fleetmq-na.cartrack.com
 # New Zealand  	fleetmq-nz.cartrack.com
+# Poland:       fleetmq-pl.cartrack.com
 # Philippines	fleetmq-ph.cartrack.com
+# Singapore	    fleetmq-sg.cartrack.com
+# South Africa: fleetmq-za.cartrack.com
 # Zimbabwe	    fleetmq-zw.cartrack.com
-# Mozambique    fleetmq-mz.cartrack.com
